<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.interfaces.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/add_button"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="2">

        <FrameLayout
            android:id="@+id/product_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/close_btn"
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_50"
                android:layout_gravity="end|top"
                android:layout_margin="@dimen/dp_8"
                android:contentDescription="@string/content_description_close_button"
                android:tint="@color/black_overlay"
                app:srcCompat="@drawable/ic_close_black_24dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_description_product_img"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_product_placeholder" />
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/product_details"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/product_title"
                    style="@style/ProductTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:text="@string/label_product" />

                <TextView
                    style="@style/ProductInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:gravity="center"
                    android:text="@string/label_desc" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_16">

                    <ImageButton
                        android:id="@+id/btn_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/dp_16"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/content_description_plus_button"
                        app:srcCompat="@drawable/ic_add_black_24dp" />

                    <TextView
                        style="@style/ProductTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/btn_minus"
                        android:layout_toEndOf="@id/btn_plus"
                        android:text="250ml"
                        tools:ignore="HardcodedText" />

                    <ImageButton
                        android:id="@+id/btn_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/dp_16"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/content_description_minus_button"
                        app:srcCompat="@drawable/ic_remove_black_24dp" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/label_add" />
</RelativeLayout>